--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chúc Em 20/10 Ngọt Ngào 💖</title>
+    <title>Em💖</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Clicker+Script&family=Imperial+Script&family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap"
