Fix image and script paths in index.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   "snap-center shrink-0 hover-zoom w-72 h-52 rounded-2xl overflow-hidden shadow-lg bg-white transition-transform duration-300";
 
                 div.innerHTML = `
-      <img src="/img/em/anh${i}.jpg" class="w-full h-full object-cover" />
+      <img src="img/em/anh${i}.jpg" class="w-full h-full object-cover" />
     `;
 
                 slideContainer.appendChild(div);
@@ -300,7 +300,7 @@
           // danh sách ảnh (có thể tự động hoặc cố định)
           const images = Array.from(
             { length: 12 },
-            (_, i) => `/img/locket/${i + 1}.jpg`
+            (_, i) => `img/locket/${i + 1}.jpg`
           );
 
           // render for
@@ -334,6 +334,6 @@
         🔊
       </button>
     </div>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
