--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         id="gallery"
         class="relative my-16 max-w-5xl mx-auto px-6 fade-in"
       >
-        <h2 class="text-3xl font-semibold text-center text-pink-700 mb-6">
+        <h2 class="text-6xl font-semibold text-center text-pink-700 mb-6 imperial-script-regular">
           📸 Embe iuu
         </h2>
 
