--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             >
               <p>
                 "Anh sẽ luôn ở đây với em, nhưng hãy nói cho anh biết rằng bất
-                cứ lúc nào em cảm thây không ổn."
+                cứ lúc nào em cảm thấy không ổn."
               </p>
               <div class="absolute -top-2 -left-5 text-3xl">🌸</div>
             </div>
@@ -208,7 +208,7 @@
               class="fade-in border border-gray-200 bg-gray-100 rounded-2xl p-3 relative flex-1"
             >
               <p>
-                Anh vui - Em thoải mái, nghiêm túc, sẳn sàng về nhà anh và gặp
+                Anh vui - Em thoải mái, nghiêm túc, sẵn sàng về nhà anh và gặp
                 ba mẹ anh...
               </p>
               <div class="absolute -top-2 -left-5 text-3xl">🌸</div>
@@ -217,7 +217,7 @@
               class="fade-in border border-gray-200 bg-gray-100 rounded-2xl p-3 relative flex-1"
             >
               <p>
-                Em Vui - Em thấy em anh thực sự nghiêm túc, nói chuyện với ba mẹ
+                Em Vui - Em thấy anh thực sự nghiêm túc, nói chuyện với ba mẹ
                 em, không ngại cho gia đình biết...
               </p>
               <div class="absolute -top-2 -left-5 text-3xl">💖</div>
