--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
         </h2>
 
         <div class="relative">
-          <!-- <button
+          <button
             id="prevBtn"
             class="absolute left-0 top-1/2 -translate-y-1/2 bg-pink-500 text-white rounded-full p-3 shadow hover:scale-110 transition"
           >
             ❮
-          </button> -->
+          </button>
 
           <div
             id="slideContainer"
