--- a/index.html
+++ b/index.html
@@ -61,14 +61,16 @@
         id="gallery"
         class="relative my-16 max-w-5xl mx-auto px-6 fade-in"
       >
-        <h2 class="text-6xl font-semibold text-center text-pink-700 mb-6 imperial-script-regular">
+        <h2
+          class="text-6xl font-semibold text-center text-pink-700 mb-6 imperial-script-regular"
+        >
           📸 Embe iuu
         </h2>
 
         <div class="relative">
           <button
             id="prevBtn"
-            class="absolute left-0 top-1/2 -translate-y-1/2 bg-pink-500 text-white rounded-full p-3 shadow hover:scale-110 transition"
+            class="absolute -left-10 top-1/2 -translate-y-1/2 text-gray-700 p-3 hover:scale-110 transition"
           >
             ❮
           </button>
@@ -96,12 +98,12 @@
             </script>
           </div>
 
-          <!-- <button
+          <button
             id="nextBtn"
-            class="absolute right-0 top-1/2 -translate-y-1/2 bg-pink-500 text-white rounded-full p-3 shadow hover:scale-110 transition"
+            class="absolute -right-10 top-1/2 -translate-y-1/2 text-gray-700 p-3 hover:scale-110 transition"
           >
             ❯
-          </button> -->
+          </button>
         </div>
       </section>
 
